2083 stmf: worker manager doesn't scale workers anymore Reviewed by: Dan McDonald <danmcd@nexenta.com> Reviewed by: Milan Jurik <milan.jurik@xylab.cz> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Richard Lowe <richlowe@richlowe.net>